# mcp-tautulli

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  prek.toml  pyproject.toml  requirements.txt  tautulli.py  tautulli_api_docs.json  test_tautulli.py  test_tautulli_integration.py  test_tautulli_mcp.py
.github/workflows/: lint.yml
