[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tautulli"
version = "1.2.0"
description = "MCP server for Tautulli — Plex monitoring via Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "lodordev" }]
keywords = ["mcp", "tautulli", "plex", "claude-code", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastmcp>=2.14",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/lodordev/mcp-tautulli"
Repository = "https://github.com/lodordev/mcp-tautulli"
Issues = "https://github.com/lodordev/mcp-tautulli/issues"

[project.scripts]
mcp-tautulli = "tautulli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["tautulli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
addopts = "--cov=tautulli --cov-fail-under=96"

[tool.coverage.report]
fail_under = 96

[dependency-groups]
dev = [
    "inline-snapshot>=0.32.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ty>=0.0.29",
]
